# polymarket-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: fiberglass.rb  polymarket.rb
docs/: HOSTED_AGENTS.md  ROADMAP.md
scripts/: update-formula.sh
src/: auth.rs  config.rs  events.rs  guard.rs  main.rs  settings.rs  shell.rs  trade.rs  updater.rs
src/commands/: approve.rs  bridge.rs  clob.rs  comments.rs  copytrade.rs  data.rs  events.rs  guard.rs  mod.rs  paper.rs  portfolio.rs  risk.rs  series.rs  settings.rs  sports.rs  strategy.rs  tags.rs  upgrade.rs  wallet.rs
src/copytrade/: config.rs  engine.rs  mod.rs
src/mcp/: mod.rs  status.rs  tools.rs
src/output/: bridge.rs  data.rs  mod.rs  paper.rs
src/paper/: engine.rs  mod.rs  quotes.rs  store.rs  types.rs
src/strategy/: config.rs  engine.rs  mod.rs  registry.rs
src/strategy/strategies/: mean_reversion.rs  mod.rs  momentum.rs  tp_sl.rs
src/tui/: app.rs  data.rs  live.rs  mod.rs  ui.rs
tests/: cli_integration.rs
