[package]
name = "polymarket-cli"
version = "0.1.9"
edition = "2024"
rust-version = "1.88.0"
description = "CLI for Polymarket — browse markets, trade, and manage positions"
license = "MIT"
repository = "https://github.com/jesodium/polymarket-cli"
keywords = ["polymarket", "prediction-markets", "trading", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "polymarket"
path = "src/main.rs"

[dependencies]
polymarket_client_sdk_v2 = { version = "0.5.1", features = ["gamma", "data", "bridge", "clob", "ctf"] }
alloy = { version = "1.6.3", default-features = false, features = ["providers", "rpc-types", "sol-types", "contract", "reqwest", "reqwest-rustls-tls", "signer-local", "signers"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tabled = "0.17"
rust_decimal = "1"
anyhow = "1"
chrono = "0.4"
dirs = "6"
rustyline = "15"
ratatui = "0.29"
crossterm = "0.28"
webbrowser = "1.2.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rust_decimal_macros = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
