[package]
name = "fiberglass"
version = "0.1.13"
edition = "2024"
rust-version = "1.88.0"
description = "Fiberglass — a trading terminal for Polymarket: browse markets, trade, and manage positions"
license = "MIT"
repository = "https://github.com/jesodium/fiberglass"
keywords = ["polymarket", "prediction-markets", "trading", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "fiberglass"
path = "src/main.rs"

[dependencies]
polymarket_client_sdk_v2 = { version = "0.5.1", features = ["gamma", "data", "bridge", "clob", "ctf"] }
alloy = { version = "1.6.3", default-features = false, features = ["providers", "rpc-types", "sol-types", "contract", "reqwest", "reqwest-rustls-tls", "signer-local", "signers"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tabled = "0.17"
rust_decimal = "1"
anyhow = "1"
chrono = "0.4"
dirs = "6"
rustyline = "15"
ratatui = "0.29"
crossterm = "0.28"
webbrowser = "1.2.1"
# OS keychain for the private key: macOS Keychain / Windows Credential Manager /
# Linux Secret Service. `crypto-rust` avoids a libsecret system dependency.
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rust_decimal_macros = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
